# smart-attendance-system

./: Analytics.cpp  Analytics.h  Attendance.cpp  Attendance.h  CMakeLists.txt  CaptureFaces.cpp  CsvUtils.h  FaceRecognition.h  README.md  RecognizeFace.cpp  SmartAttendanceSystem.cpp  SmartAttendanceSystem.sln  SmartAttendanceSystem.vcxproj  SmartAttendanceSystem.vcxproj.filters  Smart_Attendance_System_Presentation.pptx  Smart_Attendance_System_Report.docx  Student.cpp  Student.h  TrainModel.cpp  attendance.csv  email_config.csv  students.csv
Auth/: CurrentUser.h  UserManager.cpp  UserManager.h
Dashboard/: DashboardService.cpp  DashboardService.h
Gui/: AnalyticsPage.cpp  AnalyticsPage.h  AttendancePage.cpp  AttendancePage.h  DashboardPage.cpp  DashboardPage.h  DatasetCollectionPage.cpp  DatasetCollectionPage.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  NotificationWidget.cpp  NotificationWidget.h  RegisterUserDialog.cpp  RegisterUserDialog.h  ReportsPage.cpp  ReportsPage.h  SettingsPage.cpp  SettingsPage.h  StudentManagementPage.cpp  StudentManagementPage.h  ThemeManager.cpp  ThemeManager.h  TrainingPage.cpp  TrainingPage.h  UserManagementPage.cpp  UserManagementPage.h  main.cpp
Managers/: AttendanceManager.h  CameraManager.cpp  CameraManager.h  FaceRecognitionManager.cpp  FaceRecognitionManager.h
Recognition/: LivenessDetector.cpp  LivenessDetector.h  RecognitionUtils.cpp  RecognitionUtils.h
Services/: AdminAuth.cpp  AdminAuth.h  AttendanceInsights.cpp  AttendanceInsights.h  AuditLogger.cpp  AuditLogger.h  AuthenticationService.cpp  AuthenticationService.h  ConsoleUI.cpp  ConsoleUI.h  EmailService.cpp  EmailService.h  ModelStatisticsService.cpp  ModelStatisticsService.h  ProfileService.cpp  ProfileService.h
data/: users.csv
ui/: AnalyticsPage.ui  AttendancePage.ui  DashboardPage.ui  DatasetCollectionPage.ui  LoginDialog.ui  MainWindow.ui  RegisterUserDialog.ui  ReportsPage.ui  SettingsPage.ui  StudentManagementPage.ui  TrainingPage.ui  UserManagementPage.ui
